syntax = "proto3";

package notifications;
option go_package = "./search";

message UploadInIndexRequest {
    string language = 1;
    string resourceUuid = 2;
    bytes data = 3;
}

message UploadInIndexResponse {}

message SearchResourcesRequest {
    string search_text = 1;
}

message SearchResourcesResponse {
    repeated string resource_ids = 1;
}

service Search {
    rpc UploadInIndex (UploadInIndexRequest) returns(UploadInIndexResponse) {}
    rpc SearchResources (SearchResourcesRequest) returns(SearchResourcesResponse) {}
}

