syntax = "proto3";

package notifications;
option go_package = "./notifications";

enum NotificationType {
    Email = 0;
    Telegram = 1;
}

message SendNotificationRequest {
    NotificationType type = 1;
    string sender = 2;
    string reciever = 3;
}

message SendNotificationResponse {}

service Notifications {
    rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse) {}
}

